Endpoint para capturar usuários que aplicaram a uma vaga
