# api/storage/api-docs/api-docs.json
@@ -608,6 +608,82 @@
                 ]
             }
         },
+        "/api/vacancies_user/vacancy_applications/{vacancy_id}": {
+            "get": {
+                "tags": [
+                    "VacanciesUsers"
+                ],
+                "summary": "Retrieve a list of users who applied to a specific vacancy",
+                "description": "Returns a list of users who applied to a specific vacancy.",
+                "operationId": "vacancyApplications",
+                "parameters": [
+                    {
+                        "name": "vacancy_id",
+                        "in": "path",
+                        "description": "ID of the vacancy",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "A list of users who applied to the specified vacancy.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "description": "ID of the user.",
+                                                        "type": "integer",
+                                                        "example": "1"
+                                                    },
+                                                    "name": {
+                                                        "description": "Name of the user.",
+                                                        "type": "string",
+                                                        "example": "John Doe"
+                                                    },
+                                                    "email": {
+                                                        "description": "Email of the user.",
+                                                        "type": "string",
+                                                        "example": "john@exasmple.com"
+                                                    },
+                                                    "created_at": {
+                                                        "description": "Creation timestamp of the user application.",
+                                                        "type": "string",
+                                                        "example": "2024-06-09T12:00:00.000000Z"
+                                                    },
+                                                    "updated_at": {
+                                                        "description": "Update timestamp of the user application.",
+                                                        "type": "string",
+                                                        "example": "2024-06-09T12:00:00.000000Z"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Vacancy not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/vacancies": {
             "get": {
                 "tags": [
